fixed warning by changing align-items: start to flex-start

--- a/src/pages/portfolio/Portfolio.css
+++ b/src/pages/portfolio/Portfolio.css
@@ -1,7 +1,7 @@
 .project-list-item {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     background-position: center;
     background-size: cover;
